# calc

./: buildozer-32bit.spec  buildozer-64bit.spec  buildozer.spec  main.py  pyproject.toml  temp.py  travis.yml
.github/workflows/: build.yml  python-package.yml
